--- a/c_code/a_basic/a_web_test.html
+++ b/c_code/a_basic/a_web_test.html
@@ -35,11 +35,19 @@
     <div></div>
     <div></div>
     <script>
+      // 한줄 주석으로 줄바꿈되면, 주석이 자동으로 해제
+      /* 여러줄 주석
+          추가설명이 가능
+      */
 
       var myP = document.getElementsByTagName('p')[0];
 
-      myP.addEventListener( 'click', function(){
+      myP.addEventListener( 'mouseenter', function(){
         myP.style.backgroundColor = "#555";
+      } );
+
+      myP.addEventListener( 'mouseleave', function(){
+        myP.style.backgroundColor = "#969";
       } );
 
     </script>
