--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -23,7 +23,10 @@
   <h2><abbr title="cascading style sheets">CSS</abbr> basic</h2>
     <ul>
       <li><a href="./selector_01.html">CSS selector 01</a></li>
+      <li><a href="./selector_02.html">CSS selector 02</a></li>
+      <li><a href="./selector_03.html">CSS selector 03</a></li>
     </ul>
 
 </body>
 </html>
+
