--- a/c_code/a_basic/html/table_01.html
+++ b/c_code/a_basic/html/table_01.html
@@ -3,7 +3,7 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>table</title>
   <link rel="shortcut icon" href="/img/icon_03.png" type="image/png">
   <link rel="apple-touch-icon" href="/img/icon_03.png">
   <style>
@@ -14,6 +14,7 @@
     }
 
     .table_base_01 { width:500px; height:400px;}
+
     .table_base_02 { width:800px; height:400px; margin:auto; margin-top:50px; text-align:center;}
     .head_table02 { background-color:#fdc;}
     .foot_table02 { background-color:#cdf;}
@@ -23,9 +24,9 @@
     .table_base_03 { width:600px; height:400px; margin:auto; margin-top:50px;}
     .table_base_03 table { width:100%; height:370px;}
     .table_base_03 table tr {height:150px;}
-
     .one { width:15%; background-color:#fa0;}
     .two { width:100px; background-color:#856;}
+
   </style>
 </head>
 
@@ -42,10 +43,10 @@
     <table class="table_base_01">
       <caption>기초 테이블 형태 이해하기</caption>
       <tr> <th></th> <th colspan="2">1</th> <th colspan="3">3</th> </tr>
-      <tr> <td>1</td> <td rowspan="2">1-1</td> <td>1-2</td> <td>1-3</td> <td>1-4</td> <td>1-5</td> </tr>
-      <tr> <td>2</td> <td>2-1</td> <td>2-2</td> <td>2-3</td> <td>2-4</td> </tr>
-      <tr> <td>3</td> <td>3-1</td> <td>3-2</td> <td colspan="2" rowspan="2">3-3</td> <td>3-4</td> </tr>
-      <tr> <td>4</td> <td>4-1</td> <td>4-2</td> <td>4-3</td> </tr>
+      <tr> <td>1</td> <td rowspan="2">1-1<br />2-1</td> <td>1-2</td> <td>1-3</td> <td>1-4</td> <td>1-5</td> </tr>
+      <tr> <td>2</td> <td>2-2</td> <td>2-3</td> <td>2-4</td> <td>2-5</td> </tr>
+      <tr> <td>3</td> <td>3-1</td> <td>3-2</td> <td colspan="2" rowspan="2">3-3 3-4<br />4-3 4-4</td> <td>3-5</td> </tr>
+      <tr> <td>4</td> <td>4-1</td> <td>4-2</td> <td>4-5</td> </tr>
       <tr> <td>5</td> <td>5-1</td> <td>5-2</td> <td>5-3</td> <td>5-4</td> <td>5-5</td> </tr>
     </table>
 
