--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -25,6 +25,7 @@
       <li><a href="./selector_01.html">CSS selector 01</a></li>
       <li><a href="./selector_02.html">CSS selector 02</a></li>
       <li><a href="./selector_03.html">CSS selector 03</a></li>
+      <li><a href="./float.html">CSS float</a></li>
     </ul>
 
 </body>
