--- a/c_code/b_layout_test/html/layout_01.html
+++ b/c_code/b_layout_test/html/layout_01.html
@@ -9,43 +9,53 @@
 </head>
 <body>
   <!-- layout -->
-  <h1>web layout check</h1>
-  <hr />
 
+  <!-- <h1>web layout check</h1><hr /> -->
+  <h2><a href="./layout_02.html">layout2</a></h2>
   <div id="wrap">
-    <div id="header">
-      <h2>header</h2>
+    <div id="header" class="clearfix">
+      <h1><a href="">Web layout check</a></h1>
+      <div class="navigation">
+        <ul>
+          <li><span><a href="#">list_01</a></span></li>
+          <li><span><a href="#">list_02</a></span></li>
+          <li><span><a href="#">list_03</a></span></li>
+          <li><span><a href="#">list_04</a></span></li>
+          <li><span><a href="#">list_05</a></span></li>
+          <li><span><a href="#">list_06</a></span></li>
+        </ul>
+      </div>
     </div><!-- // #header  -- -  - --- - -   -       -   - --->
 
-    <div id="section">
-      <h2>section</h2>
+    <div id="section" class="clearfix">
+      <h2 class="hidden">section</h2>
       <div class="sect_01">section_01</div>
       <div class="sect_02">section_02</div>
     </div><!-- // #section -- -  - --- - -   -       -   - --->
 
-    <div id="aside">
-      <h2>aside</h2>
+    <div id="aside" class="clearfix">
+      <h2 class="hidden">aside</h2>
       <div class="side_01">side_01</div>
       <div class="side_02">side_02</div>
       <div class="side_03">side_03</div>
     </div><!-- // #aside  -- -  - --- - -   -       -   - --->
 
-    <div id="article">
-      <h2>article</h2>
-      <div class="art_01">art_01</div>
-      <div class="art_02">art_02</div>
-      <div class="art_03">art_03</div>
+    <div id="article" class="clearfix">
+      <h2 class="hidden">article</h2>
+      <div class="art_base_01 art_01">art_01</div>
+      <div class="art_base_01 art_02">art_02</div>
+      <div class="art_base_01 art_03">art_03</div>
     </div><!-- // #article  -- -  - --- - -   -       -   - --->
 
-    <div id="content">
-      <h2>content</h2>
-      <div class="art_02">art_02</div>
-      <div class="art_03">art_03</div>
-      <div class="art_01">art_01</div>
+    <div id="content" class="clearfix">
+      <h2 class="hidden">content</h2>
+      <div class="con_base_01 art_02">art_02</div>
+      <div class="con_base_01 art_03">art_03</div>
+      <div class="con_base_01 art_01">art_01</div>
     </div><!-- // #content  -- -  - --- - -   -       -   - --->
 
-    <div id="footer">
-      footer
+    <div id="footer" class="clearfix">
+      <h2 class="hidden">footer</h2>
     </div><!-- // #footer  -- -  - --- - -   -       -   - --->    
   </div>
 
