--- a/c_code/b_200922/html/layout_011.html
+++ b/c_code/b_200922/html/layout_011.html
@@ -58,16 +58,22 @@
     <div id="popularContentBox" class="clearfix">
       <h2>popularcontent</h2>
       <h3 class="pop_title">인기콘텐츠</h3>
-      <div class="pop_con_area">
-        <ul class="pop_con_outer">
-          <li class="pop_con_img_01"><h2>pop_con_01</h2></li>
-          <li class="pop_con_img_02"><h2>pop_con_02</h2></li>
-          <li class="pop_con_img_03"><h2>pop_con_03</h2></li>
-          <li class="pop_con_img_04"><h2>pop_con_04</h2></li>
-          <li class="pop_con_img_05"><h2>pop_con_05</h2></li>
-          <li class="pop_con_img_06"><h2>pop_con_06</h2></li>
-        </ul>
-      </div>
+
+        <div class="pop_con_list clearfix">
+          <ul class="pop_con_outer_01">
+            <li class="pop_con_img"><h2>pop_con_01</h2></li>
+            <li class="pop_con_img"><h2>pop_con_02</h2></li>
+          </ul>
+          <ul class="pop_con_outer_02">
+            <li class="pop_con_img"><h2>pop_con_03</h2></li>
+            <li class="pop_con_img"><h2>pop_con_04</h2></li>
+          </ul>
+          <ul class="pop_con_outer_03">
+            <li class="pop_con_img"><h2>pop_con_05</h2></li>
+            <li class="pop_con_img"><h2>pop_con_06</h2></li>
+          </ul>
+        </div>
+ 
     </div><!--popular -->
 
 
@@ -77,9 +83,13 @@
       <div class="new_con_area">
 
         <div class="new_con_area_01">
-         <div class="new_con_title_img"></div>
-         <div class="new_con_title_area"></div>
-         <div class="new_con_title_text"></div>
+         <div class="new_con_title_img"><h2>new_con_title_img</h2></div>
+         <div class="new_con_title_area"><h2>new_con_title_area</h2></div>
+         <div class="new_con_title_text">
+          <div class="new_con_title_text_01"></div>
+          <div class="new_con_title_text_02"></div>
+          <h2>new_con_title_text</h2>
+        </div>
         </div>
 
         <div class="new_con_area_02">
@@ -94,30 +104,83 @@
     <div id="recommendedContentBox" class="clearfix">
       <h2>recommended</h2>
       <h3 class="recom_title">추천콘텐츠</h3>
-      <div class="recom_con_area">
-        <ul class="re_con_part_area">
-          <li class="re_con_part_01"><h2>re_con_part_01</h2></li>
-          <li class="re_con_part_02"><h2>re_con_part_02</h2></li>
-          <li class="re_con_part_03"><h2>re_con_part_03</h2></li>
-          <li class="re_con_part_04"><h2>re_con_part_04</h2></li>
+        <ul class="re_con_part_area ">
+          <li class="re_con_part_01">
+            <ul class="re_con_part_list">
+              <li class="re_con_part_img"><h2>re_con_part_img</h2></li>
+              <li class="re_con_part_text"><h2>re_con_part_text01</h2></li>
+            </ul>
+            <h2>re_con_part_01</h2></li>
+          <li class="re_con_part_02">
+            <ul class="re_con_part_list">
+              <li class="re_con_part_img"><h2>re_con_part_img</h2></li>
+              <li class="re_con_part_text"><h2>re_con_part_text02</h2></li>
+            </ul>
+            <h2>re_con_part_02</h2></li>
+          <li class="re_con_part_03">
+            <ul class="re_con_part_list">
+              <li class="re_con_part_img"><h2>re_con_part_img</h2></li>
+              <li class="re_con_part_text"><h2>re_con_part_text03</h2></li>
+            </ul>
+            <h2>re_con_part_03</h2></li>
+          <li class="re_con_part_04">
+            <ul class="re_con_part_list">
+              <li class="re_con_part_img"><h2>re_con_part_img</h2></li>
+              <li class="re_con_part_text"><h2>re_con_part_text04</h2></li>
+            </ul>
+            <h2>re_con_part_04</h2></li>
         </ul>
-      </div>
     </div><!-- recommended -->
 
     <div id="communityBox" class="clearfix">
       <h2>community</h2>
       <h3 class="commu_title">커뮤니티</h3>
-      <div class="community_area"></div>
+      <div class="community_area">
+        <div class="commu_con01">
+          <div class="commu_con_img"><h2>commu_con_img01</h2></div>
+          <ul>
+            <li class="commu_con_title"><h2>commu_con_title01</h2></li>
+            <li class="commu_con_text"><h2>commu_con_text01</h2></li>
+          </ul>
+          <h2>commu_01</h2>
+        </div>
+        <div class="commu_con02">
+          <div class="commu_con_img"><h2>commu_con_img02</h2></div>
+          <ul>
+            <li class="commu_con_title"><h2>commu_con_title02</h2></li>
+            <li class="commu_con_text"><h2>commu_con_text02</h2></li>
+            <h2>commu_02</h2>
+          </ul>
+        </div>
+        <div class="commu_con03">
+          <div class="commu_con_img"><h2>commu_con_img03</h2></div>
+          <ul>
+            <li class="commu_con_title"><h2>commu_con_title03</h2></li>
+            <li class="commu_con_text"><h2>commu_con_text03</h2></li>
+          </ul>
+          <h2>commu_03</h2>
+        </div>
+      </div>
     </div><!-- comunity -->
+
     <div id="miniAdBox" class="clearfix">
       <h2>miniad</h2>
-      <div class="mini_ad_outer"></div>
+      <div class="mini_ad_outer">
+        <ul>
+          <li class="mini_ad_part_01"><h2>mini_ad_part_01</h2></li>
+          <li class="mini_ad_part_02"><h2>mini_ad_part_02</h2></li>
+          <li class="mini_ad_part_03"><h2>mini_ad_part_03</h2></li>
+        </ul>
+      </div>
     </div><!-- miniad -->
+    
     <div id="footBox" class="clearfix">
       <h2>foot</h2>
-      <div class="foot_area"></div>
+      <div class="foot_area">
+        <div class="foot_info"></div>
+        <div class="foot_side"></div>
+      </div>
     </div><!-- foot -->
-
 
   </div>
 
