--- a/c_code/b_200922/html/layout_011.html
+++ b/c_code/b_200922/html/layout_011.html
@@ -82,22 +82,21 @@
       <h3 class="new_title">최신콘텐츠</h3>
       <div class="new_con_area">
 
-        <div class="new_con_area_01">
-         <div class="new_con_title_img"><h2>new_con_title_img</h2></div>
-         <div class="new_con_title_area"><h2>new_con_title_area</h2></div>
-         <div class="new_con_title_text">
-          <div class="new_con_title_text_01"></div>
-          <div class="new_con_title_text_02"></div>
-          <h2>new_con_title_text</h2>
-        </div>
-        </div>
+        <ul class="new_con_area_01">
+         <li class="new_con_title_img"><h2>new_con_title_img</h2></li>
+         <li class="new_con_title_area"><h2>new_con_title_area</h2></li>
+         <ul class="new_con_title_text">
+          <li class="new_con_title_text_01"></li>
+          <li class="new_con_title_text_02"></li>
+         </ul>
+        </ul>
 
-        <div class="new_con_area_02">
-         <div class="new_con_more_01"></div>
-         <div class="new_con_more_area"></div>
-         <div class="new_con_more_02"></div>
-        </div>
-
+        <ul class="new_con_area_02">
+         <li class="new_con_more_01"></li>
+         <li class="new_con_more_area"></li>
+         <li class="new_con_more_02"></li>
+        </ul>
+        <h2>new_con_title_text</h2>
       </div>
     </div><!-- new -->
 
@@ -149,8 +148,8 @@
           <ul>
             <li class="commu_con_title"><h2>commu_con_title02</h2></li>
             <li class="commu_con_text"><h2>commu_con_text02</h2></li>
-            <h2>commu_02</h2>
           </ul>
+          <h2>commu_02</h2>
         </div>
         <div class="commu_con03">
           <div class="commu_con_img"><h2>commu_con_img03</h2></div>
