--- a/c_code/a_basic/html/float.html
+++ b/c_code/a_basic/html/float.html
@@ -11,7 +11,7 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <h1><a href="../index.html">웹기초</a></h1> <hr />
+    <h1><a href="./content.html">웹기초</a></h1> <hr />
     <h2> float 개념 파악하기</h2>
       <div class="float_01">
       <h3>float 개념 파악하기</h3>
