--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -27,6 +27,8 @@
       <li><a href="./selector_03.html">CSS selector 03</a></li>
       <li><a href="./float.html">CSS float</a></li>
       <li><a href="./mpbo.html">CSS margin, padding, border, outline and box-sizing </a></li>
+      <li><a href="./position_01.html">CSS position basic </a></li>
+      <li><a href="./position_02.html">CSS position sample </a></li>
     </ul>
 
 </body>
