--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -30,6 +30,14 @@
       <li><a href="./mpbo.html">CSS margin, padding, border, outline and box-sizing </a></li>
       <li><a href="./position_01.html">CSS position basic </a></li>
       <li><a href="./position_02.html">CSS position sample </a></li>
+      <li><a href="./background_01.html">background basic</a></li>
+      <li><a href="./ir_is.html">background 기능을 이용한 IR, IS기법</a></li>
+    </ul>
+
+<!-- =============================================================================== -->
+  <h2>sample web 02</h2>
+    <ul>
+      <li><a href="./ir_sample.html">IR기법 샘플</a></li>
     </ul>
 
 </body>
