--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -32,6 +32,7 @@
       <li><a href="./position_02.html">CSS position sample </a></li>
       <li><a href="./background_01.html">background basic</a></li>
       <li><a href="./ir_is.html">background 기능을 이용한 IR, IS기법</a></li>
+      <li><a href="./fonts_01.html">폰트사용</a></li>
     </ul>
 
 <!-- =============================================================================== -->
