--- a/c_code/a_basic/html/ir_is.html
+++ b/c_code/a_basic/html/ir_is.html
@@ -23,9 +23,32 @@
         <li><a href="#">글자의<span>영역을 감싸서 처리</span>전후로 설명이 붙음</a></li>
       </ul>
     </div>
-    <div class="hidden_text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="part">
+      <h3><abbr title="Image Sprite">IS기법</abbr></h3>
+      <ul class="is clearfix">
+        <li><span>1,1 img</span></li>
+        <li><span>1,3 img</span></li>
+        <li><span>2,1 img</span></li>
+        <li><span>3,3 img</span></li>
+        <li><span>3,5 img</span></li>
+        <li><a href="#"><span>2,5 img</span></a></li>
+        <li><a href="#"><span>4,5 img</span></a></li>
+        <li><a href="#"><span>5,7 img</span></a></li>
+        <li><button type="button"><span>5,9 img</span></button></li>
+        <li><button type="button"><span>5,11 img</span></button></li>
+      </ul>
+      <ul class="is_2 clearfix">
+        <li><a href="#"><span>img 1,1</span></a></li>
+        <li><a href="#"><span>img 1,3</span></a></li>
+        <li><a href="#"><span>img 1,5</span></a></li>
+        <li><a href="#"><span>img 4,2</span></a></li>
+        <li><a href="#"><span>img 5,4</span></a></li>
+        <li><a href="#"><span>img 5,5</span></a></li>
+        <li><a href="#"><span>img 5,8</span></a></li>
+      </ul>
     </div>
+
+
   </div>
 
   <!-- script -->
