--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -19,6 +19,9 @@
     <li><a href="./semantic.html">의미를 부여하는 태그(semantic)</a></li>
     <li><a href="./form_01.html">폼 이해하기 01</a></li>
     <li><a href="./form_02.html">폼 이해하기 02 - type 속성 및 멀티기능</a></li>
+    <li><a href="./form_03.html">폼 예제</a></li>
+    <li><a href="./form_04.html">폼 예제 풀이</a></li>
+    <li><a href="./form_05.html">폼 예제2</a></li>
   </ul>
 
   <hr />
