--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -22,6 +22,8 @@
     <li><a href="./form_03.html">폼 예제</a></li>
     <li><a href="./form_04.html">폼 예제 풀이</a></li>
     <li><a href="./form_05.html">폼 예제2</a></li>
+    <li><a href="./form_05_result.html">폼 예제2 풀이</a></li>
+    <li><a href="./form_06.html">폼 예제3</a></li>
   </ul>
 
   <hr />
