--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -24,6 +24,9 @@
     <li><a href="./form_05.html">폼 예제2</a></li>
     <li><a href="./form_05_result.html">폼 예제2 풀이</a></li>
     <li><a href="./form_06.html">폼 예제3</a></li>
+    <li><a href="./iframe.html">외부문서 불러오기</a></li>
+    <li><a href="./multimedia.html">멀티미디어</a></li>
+    <li><a href="./multimedia_01.html">멀티미디어 예제+풀이</a></li>
   </ul>
 
   <hr />
