--- a/c_code/c_sample_web/index.html
+++ b/c_code/c_sample_web/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>index</title>
   <script>
-    window.location = "./html/gcass_1013_refont.html";
+    window.location = "./html/sdf_layout.html";
   </script>
 </head>
 <body>
