--- a/c_code/c_sample_web/html/content.html
+++ b/c_code/c_sample_web/html/content.html
@@ -11,6 +11,7 @@
 <h1><a href="./sdf_layout.html">sdf</a></h1>
 <h1><a href="./sdf_result.html">sdf 풀이</a></h1>
 <h1><a href="./kakao_i.html">카카오 i</a></h1>
+<h1><a href="./kakao_i_result.html">카카오 i 풀이</a></h1>
   <!-- script -->
 
 </body>
