--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -12,10 +12,10 @@
     <h1><a href="./js_insert.html">js_insert</a></h1>
     <h1><a href="./js_01_var.html">var 변수</a></h1>
     <h1><a href="./js_02_dataType.html">문서 자료타입</a></h1>
-    <h1><a href="./js_03_operat
-      or.html">연산자</a></h1>
+    <h1><a href="./js_03_operator.html">연산자</a></h1>
     <h1><a href="./js_04_condition.html">조건, 스위치, 삼항연산</a></h1>
     <h1><a href="./js_04_1_ifOther.html">비교연산</a></h1>
+    <h1><a href="./js_05_loop.html">반복문</a></h1>
   </div>
 
 </body>
