--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -46,6 +46,9 @@
       <li><a href="./fonts_02.html">웹폰트 제작방법, 기타 폰트 설정</a></li>
       <li><a href="./unit_01.html">기본형 단위 -px, pt, %, em, rem</a></li>
       <li><a href="./mediaQuery_01.html">반응형 웹 기초 개념잡기</a></li>
+      <li><a href="./mediaQuery_02.html">반응형 웹 기초 개념잡기2</a></li>
+      <li><a href="./mediaQuery_02_result.html">반응형 웹 기초 개념잡기2 풀이</a></li>
+      <li><a href="./mediaQuery_03.html">반응형 웹 기초 개념잡기3</a></li>
     </ul>
 
 <!-- =============================================================================== -->
