--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -9,14 +9,30 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <h1><a href="./js_insert.html">js_insert</a></h1>
-    <h1><a href="./js_01_var.html">var 변수</a></h1>
-    <h1><a href="./js_02_dataType.html">문서 자료타입</a></h1>
-    <h1><a href="./js_03_operator.html">연산자</a></h1>
-    <h1><a href="./js_04_condition.html">조건, 스위치, 삼항연산</a></h1>
-    <h1><a href="./js_04_1_ifOther.html">비교연산</a></h1>
-    <h1><a href="./js_05_loop.html">반복문</a></h1>
+    <ul>
+    <li><h1><a href="./js_insert.html">js_insert</a></h1></li>
+    <li><h1><a href="./js_01_var.html">var 변수</a></h1></li>
+    <li>
+      <h1><a href="./js_02_dataType.html">문서 자료타입</a></h1></li>
+    <li>
+      <h1><a href="./js_03_operator.html">연산자</a></h1></li>
+    <li>
+      <h1><a href="./js_04_condition.html">조건 스위치 삼항연산</a></h1></li>
+    <li>
+      <h1><a href="./js_04_1_ifOther.html">비교연산</a></h1></li>
+    <li>
+      <h1><a href="./js_05_loop.html">반복문</a></h1></li>
+    <li>
+      <h1><a href="./js_06_function.html">함수01</a></h1></li>
+    <li>
+      <h1><a href="./js_07_function_ex1.html">함수예제1</a></h1></li>
+  </ul>
   </div>
-
+  <div class="part">
+    <h2>DOM</h2>
+    <ul>
+      <li><a href="./dom_01_selector_01.html">js 선택자</a></li>
+    </ul>
+  </div>
 </body>
 </html>
