--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -49,6 +49,7 @@
       <li><a href="./mediaQuery_02.html">반응형 웹 기초 개념잡기2</a></li>
       <li><a href="./mediaQuery_02_result.html">반응형 웹 기초 개념잡기2 풀이</a></li>
       <li><a href="./mediaQuery_03.html">반응형 웹 기초 개념잡기3</a></li>
+      <li><a href="./shadow.html">그림자 만들기 3종세트</a></li>
     </ul>
 
 <!-- =============================================================================== -->
