--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -24,8 +24,8 @@
       <h1><a href="./js_05_loop.html">반복문</a></h1></li>
     <li>
       <h1><a href="./js_06_function.html">함수01</a></h1></li>
-    <li>
-      <h1><a href="./js_07_function_ex1.html">함수예제1</a></h1></li>
+    <li><h1><a href="./js_07_function_ex1.html">함수예제1</a></h1></li>
+    <li><h1><a href="./js_08_array.html">배열</a></h1></li>
   </ul>
   </div>
   <div class="part">
