--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -26,6 +26,8 @@
       <h1><a href="./js_06_function.html">함수01</a></h1></li>
     <li><h1><a href="./js_07_function_ex1.html">함수예제1</a></h1></li>
     <li><h1><a href="./js_08_array.html">배열</a></h1></li>
+    <li><h1><a href="./js_08_array2.html">배열2</a></h1></li>
+    <li><h1><a href="./js_09_object.html">객체</a></h1></li>
   </ul>
   </div>
   <div class="part">
