--- a/c_code/a_basic/html/content.html
+++ b/c_code/a_basic/html/content.html
@@ -51,6 +51,7 @@
       <li><a href="./mediaQuery_03.html">반응형 웹 기초 개념잡기3</a></li>
       <li><a href="./shadow.html">그림자 만들기 3종세트</a></li>
       <li><a href="./transition.html">단회성 애니메이션 효과</a></li>
+      <li><a href="./animation.html"> 애니메이션 효과</a></li>
     </ul>
 
 <!-- =============================================================================== -->
