--- a/c_code/monffe_1030/html/monffee_main.html
+++ b/c_code/monffe_1030/html/monffee_main.html
@@ -20,7 +20,7 @@
     <!-- #headBox============ -->
 
     <section id="viewBox">
-      <h2 class="hidden_context">mongfee main AD</h2>
+        <!-- ./monffee/viewBox.html -->
     </section><!-- #viewBox============ -->
 
     <article id="bestNewsBox">
