--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -19,6 +19,8 @@
       <h2>selector / css</h2>
       <ul>
         <li><a href="./jq_01_selector.html">기본 선택자, css 운용방법</a></li>
+        <li><a href="./1104test/1104text.html">2020.11.04</a></li>
+        <li><a href="./1104test/1104text_02.html">2020.11.04_02</a></li>
       </ul>
     </article>
   </div>
