--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -26,6 +26,7 @@
         <ul>
           <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
           <li><a href="./ex_01_accordion_test.html">201106 예제</a></li>
+          <li><a href="./ex_02_slideBtnBanner.html">슬라이드버튼배너</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
