--- a/c_code/e_jquery/html/1104test/1104text_02.html
+++ b/c_code/e_jquery/html/1104test/1104text_02.html
@@ -14,16 +14,16 @@
   <!-- layout -->
     <div class="miniProduct">
       <div class="indicator">
-        <button type="button"><span>next</span></button>
-        <button type="button"><span>prev</span></button>
+        <button type="button" class="next"><span>next</span></button>
+        <button type="button" class="prev"><span>prev</span></button>
       </div>
       <div class="product_wrap">
-        <ul class="product hidden_wrap">
-          <li><a href="#"><span>상품설명01</span></a></li>
-          <li><a href="#"><span>상품설명02</span></a></li>
-          <li><a href="#"><span>상품설명03</span></a></li>
-          <li><a href="#"><span>상품설명04</span></a></li>
-          <li><a href="#"><span>상품설명05</span></a></li>
+        <ul class="product">
+          <li class="product_01"><a href="#"><span>상품설명01</span></a></li>
+          <li class="product_02"><a href="#"><span>상품설명02</span></a></li>
+          <li class="product_03"><a href="#"><span>상품설명03</span></a></li>
+          <li class="product_04"><a href="#"><span>상품설명04</span></a></li>
+          <li class="product_05"><a href="#"><span>상품설명05</span></a></li>
         </ul>
       </div>
     </div>
