--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -27,6 +27,8 @@
           <li><a href="./ex_01_accordion.html">아코디언메뉴</a></li>
           <li><a href="./ex_01_accordion_test.html">201106 예제</a></li>
           <li><a href="./ex_02_slideBtnBanner.html">슬라이드버튼배너</a></li>
+          <li><a href="./ex_03_fancyBox_plugIn.html">fancyBox(plug-in)기능</a></li>
+          <li><a href="./ex_03_modal_window.html">modal window</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
