--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -29,7 +29,7 @@
           <li><a href="./ex_02_slideBtnBanner.html">슬라이드버튼배너</a></li>
           <li><a href="./ex_03_fancyBox_plugIn.html">fancyBox(plug-in)기능</a></li>
           <li><a href="./ex_03_modal_window.html">modal window</a></li>
-          <li><a href="./ex_04_onepageScroll.html">스크롤 상단 소정 처리, 클릭시 해당페이지 이동</a></li>
+          <li><a href="./ex_04_onepageScroll.html">스크롤 상단 소정 처리, 클릭시 해당페이지 이동, 탭메뉴</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
