--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -31,6 +31,8 @@
           <li><a href="./ex_03_modal_window.html">modal window</a></li>
           <li><a href="./ex_04_onepageScroll.html">스크롤 상단 소정 처리, 클릭시 해당페이지 이동, 탭메뉴</a></li>
           <li><a href="./ex_05_rwdTemp.html">JS를 반응형으로 구현하기</a></li>
+          <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr> 영역 구성하기</a></li>
+          <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
