--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -38,6 +38,7 @@
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
         <li><a href="./1104test/1104text_02.html">2020.11.04_02</a></li>
         <li><a href="./1104test/1104text_03.html">2020.11.04_03</a></li>
+        <li><a href="./1104test/1124test.html">11/25시험 문제풀이</a></li>
       </ul>
     </article>
   </div>
