--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -21,6 +21,7 @@
         <li><a href="./jq_01_selector.html">기본 선택자, css 운용방법</a></li>
         <li><a href="./jq_02_showHide.html">선택요소 온/오프</a></li>
         <li><a href="./jq_03_makeRemove.html">요소 생성/삭제</a></li>
+        <li><a href="./jq_04_importJson.html">json파일 불러오기</a></li>
         <hr />
         <h2>Sample</h2>
         <ul>
@@ -33,6 +34,7 @@
           <li><a href="./ex_05_rwdTemp.html">JS를 반응형으로 구현하기</a></li>
           <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr> 영역 구성하기</a></li>
           <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
+          <li><a href="./ex_08_moreBtn.html">더보기 버튼 클릭</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
