--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -35,6 +35,7 @@
           <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr> 영역 구성하기</a></li>
           <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
           <li><a href="./ex_08_moreBtn.html">더보기 버튼 클릭</a></li>
+          <li><a href="./ex_09_notice.html">게시판만들기</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
