--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="shortcut icon" href="../img/favicon_01.png" type="image/png">
   <title>jQuery</title>
 </head>
 <body>
@@ -36,6 +34,7 @@
           <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
           <li><a href="./ex_08_moreBtn.html">더보기 버튼 클릭</a></li>
           <li><a href="./ex_09_notice.html">게시판만들기</a></li>
+          <li><a href="./ex_10_zoomImg.html">이미지 확대</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
