--- a/c_code/e_jquery/html/ex_09_notice.html
+++ b/c_code/e_jquery/html/ex_09_notice.html
@@ -29,6 +29,10 @@
       <ul>
         <!-- <li class="action"><a href="#">01</a></li>-->
       </ul>
+      <div class="more_btn">
+        <button type="button" class="next_notice">next</button>
+        <button type="button" class="prev_notice">prev</button>
+      </div>
     </div>
   </div>
 </div>
