--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -37,6 +37,7 @@
           <li><a href="./ex_10_zoomImg.html">이미지 확대</a></li>
           <li><a href="./ex_11_mouseMove01.html">마우스 이동시 객체 이동하기</a></li>
           <li><a href="./ex_12_mouseMove02.html">마우스 이동시 이미지 변경하기</a></li>
+          <li><a href="./ex_13_landing.html">랜딩 웹페이지</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
