--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -44,6 +44,8 @@
         <li><a href="./1104test/1104text_02.html">2020.11.04_02</a></li>
         <li><a href="./1104test/1104text_03.html">2020.11.04_03</a></li>
         <li><a href="./1104test/1124test.html">11/25시험 문제풀이</a></li>
+        <li><a href="./array_test.html">배열 확인용</a></li>
+        <li><a href="./aa.html">인터넷에서 가져온 예제(skymin2.tistory)</a></li>
       </ul>
     </article>
   </div>
