--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -39,6 +39,8 @@
           <li><a href="./ex_12_mouseMove02.html">마우스 이동시 이미지 변경하기</a></li>
           <li><a href="./ex_13_landing.html">랜딩 웹페이지</a></li>
           <li><a href="./ex_14_parallax.html">패럴랙스 웹페이지 - firewatch 게임 웹페이지</a></li>
+          <li><a href="./ex_15_parallax02.html">패럴랙스 웹페이지2 - the-goonies.webflow.io</a></li>
+          <li><a href="./ex_16_card.html">pinterest 유사 카드페이지</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
