--- a/c_code/e_jquery/html/content.html
+++ b/c_code/e_jquery/html/content.html
@@ -41,6 +41,8 @@
           <li><a href="./ex_14_parallax.html">패럴랙스 웹페이지 - firewatch 게임 웹페이지</a></li>
           <li><a href="./ex_15_parallax02.html">패럴랙스 웹페이지2 - the-goonies.webflow.io</a></li>
           <li><a href="./ex_16_card.html">pinterest 유사 카드페이지</a></li>
+          <li><a href="./ex_17_map.html">카카오 지도</a></li>
+          <li><a href="./ex_18_card02.html">pinterest 유사 카드페이지 02</a></li>
         </ul>
         <hr />
         <li><a href="./1104test/1104text.html">2020.11.04</a></li>
